--- a/src/components/ur-novl/ur-novl.css
+++ b/src/components/ur-novl/ur-novl.css
@@ -31,6 +31,7 @@
     font-weight: 700;
     text-transform: uppercase;
     font-size: 14px;
+    line-height: 14px;
 }
 
 :host .cover .ongoing span {
