--- a/src/components/ur-novl/ur-novl.css
+++ b/src/components/ur-novl/ur-novl.css
@@ -1,10 +1,20 @@
 :host {
+    --novl-width: 100%;
+    --novl-border-radius: 16px 16px 5px 5px;
+}
+
+:host {
     display: flex;
     flex-direction: column;
-    width: 100%;
     box-sizing: content-box;
     container-type: inline-size;
     container-name: novl;
+}
+
+:host .novl {
+    overflow: hidden;
+    width: var(--novl-width);
+    border-radius: var(--novl-border-radius);
 }
 
 :host .cover {
@@ -84,8 +94,6 @@
     padding: 7px 11px;
     background: #F7F7F7;
     box-sizing: border-box;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
 }
 
 :host .info .title {
