--- a/src/components/ur-button-arrow-right/ur-button-arrow-right.css
+++ b/src/components/ur-button-arrow-right/ur-button-arrow-right.css
@@ -1,8 +1,10 @@
 :host {
+    border-radius: 50%;
+
     button {
         height: 34px;
         width: 34px;
-        border-radius: 50%;
+        border-radius: inherit;
         fill: #f7f7f7;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         display: flex;
