--- a/src/components/ur-profile/ur-profile.css
+++ b/src/components/ur-profile/ur-profile.css
@@ -9,6 +9,10 @@
     padding: 16px;
 }
 
+:host .profile .icon {
+    display: inline-block;
+}
+
 :host .profile .name {
     font-weight: 700;
     line-height: 24px;
@@ -41,7 +45,7 @@
     display: flex;
 }
 
-:host .profile .social img {
+:host .profile .social .icon {
     height: 18px;
     width: 18px;
     margin-right: 10px;
@@ -65,7 +69,7 @@
     text-decoration: underline;
 }
 
-:host .profile .website img {
+:host .profile .website .icon {
     padding-right: 10px;
 }
 
