--- a/src/components/ur-button-arrow-left/ur-button-arrow-left.css
+++ b/src/components/ur-button-arrow-left/ur-button-arrow-left.css
@@ -1,7 +1,8 @@
 :host {
     border-radius: 50%;
 
-    button {
+    button,
+    mdui-button-icon {
         height: 34px;
         width: 34px;
         border-radius: inherit;
@@ -12,5 +13,10 @@
         justify-content: center;
         border: 0;
         cursor: pointer;
+        background-color: rgb(239, 239, 239);
+    }
+
+    mdui-button-icon svg {
+        height: 21px;
     }
 }
