--- a/src/components/ur-locale-filter-panel/ur-locale-filter-panel.css
+++ b/src/components/ur-locale-filter-panel/ur-locale-filter-panel.css
@@ -1,9 +1,12 @@
+:host {
+    /* --mdui-color-primary: #09f;*/
+}
+
 :host .locale-filter-panel {
     display: block;
     width: 100%;
     max-width: 500px;
     display: flex;
-    border: 1px solid red;
     height: 100%;
     flex-direction: column;
 }
@@ -13,19 +16,80 @@
     position: relative;
     border-bottom: 1px solid #73777F;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding: 4px;
+}
+
+:host .locale-filter-panel header mdui-button {
+    height: 40px;
+    width: 40px;
+    min-width: 40px;
+    box-sizing: border-box;
+    border-radius: 0;
+    padding: 0;
+}
+
+:host .locale-filter-panel header label {
+    flex: 1;
+    text-align: center;
+    position: relative;
+    left: -22px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0;
 }
 
 :host .locale-filter-panel main {
-    /**/
+    padding: 16px;
+}
+
+:host .locale-filter-panel main .description {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.1px;
+}
+
+:host .locale-filter-panel main .description .title {
+    padding: 8px 0;
+    font-weight: 700;
+}
+
+:host .locale-filter-panel main .locales {
+    margin-left: -12px;
+}
+
+:host .locale-filter-panel main .locales mdui-checkbox {
+    border-radius: 0;
+    width: 100%;
 }
 
 :host .locale-filter-panel footer {
     border-top: 1px solid #73777F;
     height: 72px;
+    display: flex;
+    align-items: center;
+    padding: 16px 24px;
+    box-sizing: border-box;
 }
 
-:host .locale-filter-panel main mdui-checkbox {
-    background: red;
-    border-radius: 0;
-    width: 100%;
+:host .locale-filter-panel footer mdui-button {
+    padding: 10px 24px;
+    height: 40px;
+    border-radius: 5px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 15px;
+    max-width: 79px;
+}
+
+:host .locale-filter-panel footer mdui-button.save {
+    background-color: #09f;
+}
+
+:host .locale-filter-panel footer mdui-button.cancel {
+    padding: 10px 12px;
+    color: #09f;
 }
