--- a/src/components/ur-novl/ur-novl.css
+++ b/src/components/ur-novl/ur-novl.css
@@ -1,6 +1,6 @@
 :host {
     --novl-width: 100%;
-    --novl-border-radius: 16px 16px 5px 5px;
+    --novl-border-radius: 8px;
 }
 
 :host {
@@ -12,32 +12,33 @@
 }
 
 :host .novl {
+    max-width: 350px;
     overflow: hidden;
     width: var(--novl-width);
-    border-radius: var(--novl-border-radius);
+    border-radius: 8px;
 }
 
 :host .cover {
     aspect-ratio: 2.25;
-    background-color: #131519;
+    background-color: rgb(var(--mdui-color-error));
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50%;
+    background-position: center;
     position: relative;
 }
 
 :host .cover .ongoing {
-    background-color: #ff3b01;
-    height: 30px;
-    width: 30px;
+    background-color: rgb(var(--mdui-color-primary-container));
+    height: 32px;
+    width: 32px;
     border-radius: 50%;
     position: absolute;
-    top: 10px;
-    left: 11.44px;
+    top: 8px;
+    left: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: rgb(var(--mdui-color-primary));
     font-weight: 700;
     text-transform: uppercase;
     font-size: 14px;
@@ -50,28 +51,30 @@
 
 :host .cover .price {
     position: absolute;
-    top: 10px;
-    right: 11.44px;
+    top: 8px;
+    right: 8px;
     border-radius: 25px;
-    background: rgba(43, 43, 39, 0.95);
+    background: rgba(43, 43, 39, 0.55);
     padding: 10px 24px;
     box-sizing: border-box;
-    line-height: 12px;
+    line-height: 14px;
     font-weight: 700;
     font-size: 14px;
     color: #fff;
 }
 
 :host .cover .publisher {
-    position: absolute;
+    left: 0;
     bottom: 0;
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.30);
+    height: 48px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
     display: flex;
+    position: absolute;
     align-items: center;
     width: 100%;
-    padding: 4px 11.44px;
+    padding: 0 8px;
     box-sizing: border-box;
+    column-gap: 8px;
 }
 
 :host .cover .publisher .avatar {
@@ -87,27 +90,29 @@
     font-weight: 600;
     line-height: 12px; /* 100% */
     color: #fff;
-    margin-left: 7.56px;
 }
 
 :host .info {
-    padding: 7px 11px;
-    background: #F7F7F7;
+    display: flex;
+    flex-direction: column;
+    padding: 12px 8px;
+    row-gap: 8px;
+    background: rgb(var(--mdui-color-background));
     box-sizing: border-box;
 }
 
 :host .info .title {
-    color: #171818;
-    font-size: 14px;
+    color: rgb(var(--mdui-color-on-background));
+    font-size: 16px;
+    line-height: 18px;
     font-style: normal;
     font-weight: 700;
-    line-height: 18px;
+    letter-spacing: 0.5px;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* Number of lines */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 7px;
 }
 
 :host .info .stats {
@@ -116,8 +121,7 @@
     line-height: 12px;
     display: flex;
     flex-direction: row;
-    margin-bottom: 7px;
-    color: #333;
+    color: rgb(var(--mdui-color-on-background));
 }
 
 :host .info .stats b {
@@ -129,21 +133,20 @@
 }
 
 :host .info .stats .likes .dot {
-    margin: 0 5px;
+    margin: 0 4px;
 }
 
 :host .info .description {
-    color: #171818;
-    font-size: 11px;
+    color: rgb(var(--mdui-color-on-background));
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 18px; /* 163.636% */
+    line-height: 16px; /* 163.636% */
     display: -webkit-box;
     -webkit-line-clamp: 2; /* Number of lines */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 7px;
 }
 
 :host .info .author {
@@ -153,8 +156,9 @@
     font-size: 11px;
     font-style: normal;
     font-weight: 600;
-    color: #1D1B20;
+    color: rgb(var(--mdui-color-on-background));
     cursor: pointer;
+    column-gap: 8px;
 }
 
 :host .info .author .avatar {
@@ -165,19 +169,15 @@
 }
 
 :host .info .author .name {
-    margin-left: 8px;
-}
-
-@container novl (min-width: 290px) {
-    :host .info .title {
-        font-size: 1rem;
-        line-height: 1.2rem;
-    }
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 12px;
 }
 
 @container novl (min-width: 300px) {
     :host .info .title {
-        font-size: 1.2rem;
-        line-height: 1.5rem;
+        font-size: 1rem;
+        line-height: 1.2rem;
     }
 }
