--- a/src/components/ur-novl/ur-novl.css
+++ b/src/components/ur-novl/ur-novl.css
@@ -12,10 +12,9 @@
 }
 
 :host .novl {
-    max-width: 350px;
     overflow: hidden;
     width: var(--novl-width);
-    border-radius: 8px;
+    border-radius: var(--novl-border-radius);
 }
 
 :host .cover {
@@ -55,7 +54,7 @@
     right: 8px;
     border-radius: 25px;
     background: rgba(43, 43, 39, 0.55);
-    padding: 10px 24px;
+    padding: 9px 16px;
     box-sizing: border-box;
     line-height: 14px;
     font-weight: 700;
@@ -95,7 +94,7 @@
 :host .info {
     display: flex;
     flex-direction: column;
-    padding: 12px 8px;
+    padding: 8px;
     row-gap: 8px;
     background: rgb(var(--mdui-color-background));
     box-sizing: border-box;
@@ -104,10 +103,8 @@
 :host .info .title {
     color: rgb(var(--mdui-color-on-background));
     font-size: 16px;
-    line-height: 18px;
     font-style: normal;
     font-weight: 700;
-    letter-spacing: 0.5px;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* Number of lines */
     -webkit-box-orient: vertical;
@@ -116,7 +113,7 @@
 }
 
 :host .info .stats {
-    font-size: 11px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 12px;
     display: flex;
@@ -175,9 +172,56 @@
     line-height: 12px;
 }
 
-@container novl (min-width: 300px) {
+@container novl (max-width: 300px) {
     :host .info .title {
-        font-size: 1rem;
+        font-size: 14px;
         line-height: 1.2rem;
+    }
+
+    :host .info .author .avatar {
+        height: 24px;
+        width: 24px;
+    }
+
+    :host .cover .publisher {
+        height: 40px;
+        padding: 0 4px;
+    }
+
+    :host .cover .publisher .avatar {
+        height: 24px;
+        width: 24px;
+    }
+
+    :host .cover .publisher .name {
+        font-size: 11px;
+    }
+
+    :host .info .author .name {
+        font-size: 11px;
+    }
+
+    :host .cover .ongoing {
+        width: 24px;
+        height: 24px;
+        left: 4px;
+    }
+
+    :host .cover .price {
+        padding: 5px 8px;
+        font-size: 12px;
+    }
+
+    :host .info .stats {
+        font-size: 11px;
+    }
+
+    :host .info .description{
+        font-size: 11px;
+    }
+
+    :host .info {
+        row-gap: 4px;
+        padding: 4px;
     }
 }
