--- a/src/components/ur-button/ur-button.css
+++ b/src/components/ur-button/ur-button.css
@@ -1,7 +1,9 @@
 :host {
-    display: block;
+    display: inline-block;
+    --ur-shape-corner-small: var(--mdui-shape-corner-small);
 }
 
 :host mdui-button {
-    border-radius: var(--mdui-shape-corner-small);
+    width: inherit;
+    border-radius: var(--ur-shape-corner-small);
 }
