--- a/src/components/ur-user/ur-user.css
+++ b/src/components/ur-user/ur-user.css
@@ -1,6 +1,6 @@
 :host {
     --user-width: 100%;
-    --user-border-radius: 16px 16px 5px 5px;
+    --user-border-radius: 8px;
 }
 
 :host {
@@ -18,106 +18,42 @@
 }
 
 :host .cover {
-    aspect-ratio: 2.25;
-    background-color: #131519;
+    aspect-ratio: 1.5;
+    background-color: rgb(var(--mdui-color-on-background));
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50%;
+    background-position: center;
     position: relative;
-}
-
-:host .cover .ongoing {
-    background-color: #ff3b01;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    position: absolute;
-    top: 10px;
-    left: 11.44px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 14px;
-}
-
-:host .cover .ongoing span {
-    position: relative;
-}
-
-:host .cover .price {
-    position: absolute;
-    top: 10px;
-    right: 11.44px;
-    border-radius: 25px;
-    background: rgba(43, 43, 39, 0.95);
-    padding: 10px 24px;
-    box-sizing: border-box;
-    line-height: 12px;
-    font-weight: 700;
-    font-size: 14px;
-    color: #fff;
-}
-
-:host .cover .publisher {
-    position: absolute;
-    bottom: 0;
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.30);
-    display: flex;
-    align-items: center;
-    width: 100%;
-    padding: 4px 11.44px;
-    box-sizing: border-box;
-}
-
-:host .cover .publisher .avatar {
-    height: 32px;
-    width: 32px;
-    border-radius: 50%;
-    background-size: cover;
-}
-
-:host .cover .publisher .name {
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 12px; /* 100% */
-    color: #fff;
-    margin-left: 7.56px;
 }
 
 :host .info {
-    padding: 7px 11px;
-    background: #F7F7F7;
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+    row-gap: 8px;
+    background: rgb(var(--mdui-color-background));
     box-sizing: border-box;
 }
 
 :host .info .title {
-    color: #171818;
-    font-size: 14px;
+    color: rgb(var(--mdui-color-on-background));
+    font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    line-height: 18px;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* Number of lines */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 7px;
 }
 
 :host .info .stats {
-    font-size: 11px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 12px;
     display: flex;
     flex-direction: row;
-    margin-bottom: 7px;
-    color: #333;
+    color: rgb(var(--mdui-color-on-background));
 }
 
 :host .info .stats b {
@@ -127,59 +63,50 @@
 :host .info .stats .followers {
     display: flex;
 }
-:host .follow {
-    width: 100%;
+
+:host .user .actions {
+    padding-top: 10px;
 }
-:host .info .stats .likes .dot {
-    margin: 0 5px;
+
+:host .user .actions ur-button {
+    width: 100%;
+    padding-bottom: 5px;
+}
+
+:host .follow {
+    display: flex;
+    width: 100%;
 }
 
 :host .info .description {
-    color: #171818;
-    font-size: 11px;
+    color: rgb(var(--mdui-color-on-background));
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 18px; /* 163.636% */
+    line-height: 16px; /* 163.636% */
     display: -webkit-box;
     -webkit-line-clamp: 2; /* Number of lines */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 7px;
 }
 
-:host .info .author {
-    height: 32px;
-    display: flex;
-    align-items: center;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 600;
-    color: #1D1B20;
-    cursor: pointer;
-}
-
-:host .info .author .avatar {
-    height: 32px;
-    width: 32px;
-    border-radius: 50%;
-    background-size: cover;
-}
-
-:host .info .author .name {
-    margin-left: 8px;
-}
-
-@container user (min-width: 290px) {
+@container user (max-width: 300px) {
     :host .info .title {
-        font-size: 1rem;
+        font-size: 14px;
         line-height: 1.2rem;
     }
-}
 
-@container user (min-width: 300px) {
-    :host .info .title {
-        font-size: 1.2rem;
-        line-height: 1.5rem;
+    :host .info .stats {
+        font-size: 11px;
+    }
+
+    :host .info .description{
+        font-size: 11px;
+    }
+
+    :host .info {
+        row-gap: 4px;
+        padding: 4px;
     }
 }
