--- a/src/components/ur-page/ur-page.css
+++ b/src/components/ur-page/ur-page.css
@@ -1,6 +1,9 @@
 :host {
     --page-width: 100%;
     --page-border-radius: 8px;
+    --ur-color-on-background: var(--mdui-color-on-background);
+    --ur-color-background: var(--mdui-color-background);
+    --ur-color-on-container-lite-dark: var(--mdui-color-on-container-lite-dark);
 }
 
 :host {
@@ -19,7 +22,7 @@
 
 :host .cover {
     aspect-ratio: 1.5;
-    background-color: rgb(var(--mdui-color-error));
+    background-color: rgb(var(--ur-color-on-background));
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -31,12 +34,12 @@
     flex-direction: column;
     padding: 8px;
     row-gap: 8px;
-    background: rgb(var(--mdui-color-background));
+    background: rgb(var(--ur-color-background));
     box-sizing: border-box;
 }
 
 :host .info .title {
-    color: rgb(var(--mdui-color-on-background));
+    color: rgb(var(--ur-color-on-background));
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -53,7 +56,7 @@
     line-height: 12px;
     display: flex;
     flex-direction: row;
-    color: rgb(var(--mdui-color-on-background));
+    color: rgb(var(--ur-color-on-background));
 }
 
 :host .info .stats b {
@@ -79,7 +82,7 @@
 }
 
 :host .info .description {
-    color: rgb(var(--mdui-color-on-container-lite-dark));
+    color: rgb(var(--ur-color-on-container-lite-dark));
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
