--- a/src/components/ur-dialog/ur-dialog.css
+++ b/src/components/ur-dialog/ur-dialog.css
@@ -1,7 +1,36 @@
 :host {
-  display: block;
+    --ur-color-on-background: var(--mdui-color-on-background);
 }
 
-.example-dialog {
+:host .dialog {
+    display: block;
     width: auto;
+}
+
+:host .title {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+:host .description {
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+}
+
+:host .actions {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    padding-top: 12px;
+}
+
+:host .actions ur-button {
+    padding: 8px 20px;
+    font-size: 14px;
+    border: none;
+    color: rgb(var(--ur-color-on-background));
+    border-radius: 4px;
+    cursor: pointer;
 }
