--- a/src/components/ur-dialog/ur-dialog.css
+++ b/src/components/ur-dialog/ur-dialog.css
@@ -1,36 +1,8 @@
 :host {
-    --ur-color-on-background: var(--mdui-color-on-background);
+    --ur-dialog-panel-border-radius: 0;
 }
 
-:host .dialog {
-    display: block;
-    width: auto;
-}
-
-:host .title {
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-}
-
-:host .description {
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-}
-
-:host .actions {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    padding-top: 12px;
-}
-
-:host .actions ur-button {
-    padding: 8px 20px;
-    font-size: 14px;
-    border: none;
-    color: rgb(var(--ur-color-on-background));
-    border-radius: 4px;
-    cursor: pointer;
+:host mdui-dialog::part(panel) {
+    padding: 0;
+    border-radius: var(--ur-dialog-panel-border-radius);
 }
