--- a/src/components/ur-list/ur-list-subheader.css
+++ b/src/components/ur-list/ur-list-subheader.css
@@ -1,9 +1,7 @@
 :host {
     display: block;
-}
-
-mdui-list {
     margin: 0;
     padding: 0;
-    list-style: none;
+    opacity: 0.5;
+    text-transform: uppercase;
 }
