--- a/src/components/ur-button/ur-button.css
+++ b/src/components/ur-button/ur-button.css
@@ -5,5 +5,10 @@
 
 :host mdui-button {
     width: inherit;
+    font-size: 14px;
     border-radius: var(--ur-shape-corner-small);
+}
+
+mdui-button::part(icon) {
+    font-size: 24px;
 }
